examples/errors/string_plus_number.eigs
# ERROR DEMO — concatenating a string with a number.
# `+` requires both operands to be the same kind; convert explicitly
# with `str of n` or `num of s`.
# expect-error: cannot apply '+' to str and num
msg is "count: " + 3
